add focus to form

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="skrow1  grid grid-cols-4 grid-rows-1 gap-1 mb-8">
                     <div class="s1 row-start-1 row-end-2 col-start-1 col-end-2 relative h-[230px]">
                       <h4 class="absolute bottom-0 left-[40%]"><span class="text-[#46a237]"><strong>M</strong></span>ongoDB</h4>
-                          <img  src="ressources/mongo.png"  alt="mongo" class="w-[200px] h-[200px] mx-auto"/>
+                          <img  src="ressources/mongo.png"  alt="mongo" class="w-[200px] h-[200px] mx-auto "/>
                     </div>
                     <div class="s2 row-start-1 row-end-2 col-start-2 col-end-3 relative h-[230px]">
                       <h4 class="absolute bottom-0 left-[40%]"><span class="text-[#828282]"><strong>E</strong></span>xpress</h4>
@@ -132,20 +132,20 @@
                         <div class="flex gap-1 mb-2" >
                           <div class=" w-1/2">
                             <label for="prenom">Prenom</label><br/>
-                            <input type="text" name="prenom" id="prenom" class="w-full rounded" />
+                            <input type="text" name="prenom" id="prenom" class="w-full rounded text-black focus:outline-[#3636FF]" />
                           </div>
                           <div class=" w-1/2">
                             <label for="prenom">Nom</label><br/>
-                            <input type="text" name="nom" id="nom" class="w-full rounded" />
+                            <input type="text" name="nom" id="nom" class="w-full rounded text-black focus:outline-[#3636FF]" />
                           </div> 
                         </div>
                         <div class="mb-2" >
                           <label for="prenom" >Email</label><br/>
-                         <input type="email" name="email" id="email" class="w-full rounded" />
+                         <input type="email" name="email" id="email" class="w-full rounded text-black focus:outline-[#3636FF]" />
                         </div>
                         <div class="mb-2">
                           <label>Message</label><br/> 
-                         <textarea placeholder="Votre message ici" class="w-full rounded" ></textarea>
+                         <textarea placeholder="Votre message ici" class="w-full rounded text-black focus:outline-[#3636FF]" ></textarea>
                         </div>
                         
                         <button class="w-full rounded bg-[#3636FF] mb-2 h-[40px] hover:bg-[rgb(28,28,145)]">Envoyer</button>
