--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             </a>
           </div>
           <div class="profile md:w-1/2 lg:w-2/5 flex justify-center" id="profile">
-            <div class="picture border-8 rounded-full overflow-hidden w-64 h-64 md:w-80 md:h-80 border-primary-blue shadow-2xl hover:scale-105 transition duration-500">
-              <img src="profil.jpg" alt="Photo de profil de Joseph Nodichao, développeur fullstack" class="object-cover w-full h-full"/>
+            <div class="picture rounded-full overflow-hidden w-72 h-72 md:w-80 md:h-80 shadow-2xl hover:scale-105 transition duration-500">
+              <img src="ressources/photo pro.jpg" alt="Photo de profil de Joseph Nodichao, développeur fullstack" class="object-cover object-top w-full h-full"/>
             </div>
           </div>
         </section>
@@ -110,6 +110,20 @@
           <h3 id="work-title" class="text-center text-4xl font-extrabold mb-12"><span class="font-h1 text-primary-blue"><i>P</i></span>rojets</h3>
 
           <div class="space-y-12">
+            <article class="realisations flex flex-col lg:flex-row gap-8 lg:gap-12 items-center">
+              <div class="lg:w-1/2">
+                <h4 class="text-2xl font-bold mb-4 border-b-2 border-primary-blue pb-2">Dioko — Application fintech</h4>
+                <p class="text-gray-300 leading-relaxed mb-6">
+                  Une application fintech de gestion automatisée des salaires et d’encaissement des paiements clients. J’y ai notamment intégré des API de paiement telles que <span class="text-primary-blue italic font-semibold">PayDunya</span>, ce qui m’a permis de mieux comprendre les exigences techniques et sécuritaires liées aux transactions financières.
+                </p>
+              </div>
+              <div class="lg:w-1/2 flex justify-center">
+                <video autoplay muted loop playsinline class="w-full max-w-md border-4 border-primary-blue rounded-xl shadow-xl" aria-label="Démonstration vidéo du projet Dioko">
+                  <source src="ressources/video dioko.mp4" type="video/mp4"/>
+                  Votre navigateur ne supporte pas la vidéo.
+                </video>
+              </div>
+            </article>
             <article class="realisations flex flex-col lg:flex-row gap-8 lg:gap-12 items-center">
               <div class="lg:w-1/2">
                 <h4 class="text-2xl font-bold mb-4 border-b-2 border-primary-blue pb-2">Elek Consulting Group</h4>
